gcc/testsuite/g++.dg/cpp2a/constexpr-inst1.C
// Testcase from P0859
// { dg-do compile { target c++14 } }

template<typename T> constexpr int f() { return T::value; } // { dg-error "int" }
template<bool B, typename T> void g(decltype(B ? f<T>() : 0));
template<bool B, typename T> void g(...);
template<bool B, typename T> void h(decltype(int{B ? f<T>() : 0}));
template<bool B, typename T> void h(...);
void x() {
  g<false, int>(0); // OK, B ? f<T>() : 0 is not potentially constant evaluated
  h<false, int>(0); // error, instantiates f<int> even though B evaluates to false and
                    // list-initialization of int from int cannot be narrowing
}
